--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGODB_URI=mongodb://mongo:27017/mydatabase
+MONGODB_URI=mongodb+srv://mihajlecvladislav:vkweap4DuznLyVfR@cluster1.zlnzqwn.mongodb.net/
