--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,11 @@ services:
       - /app/node_modules
 
   mongo:
-    image: mongo
+    image: mongo:4.4
+    volumes:
+      - mongo-data:/data/db
     ports:
       - '27017:27017'
-    volumes:
-      - mongo_data:/data/db
 
 volumes:
-  mongo_data:
+  mongo-data:
